# async-tcp-chat-client

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .settings  Dockerfile  README.md  app.py  consts.py  docker-compose.yml  gui.py  main.py  pyproject.toml  reader.py  register.py  register_gui.py  requirements.txt  utils.py  writer.py
